--- a/Snap/Snap/Snap-Info.plist
+++ b/Snap/Snap/Snap-Info.plist
@@ -48,5 +48,9 @@
 	</array>
 	<key>UIStatusBarHidden</key>
 	<true/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Action_Man.ttf</string>
+	</array>
 </dict>
 </plist>
