Implement HostViewController and JoinViewController

--- a/Snap/Snap/Snap-Info.plist
+++ b/Snap/Snap/Snap-Info.plist
@@ -39,6 +39,7 @@
 	<true/>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
+		<string>peer-peer</string>
 		<string>armv7</string>
 	</array>
 	<key>UISupportedInterfaceOrientations</key>
